fixed z-index on image at hero

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -148,6 +148,8 @@
    justify-content: center;
    align-items: center;
    max-width: 50%;
+   position: relative;
+   z-index: 1;
  
    
 
@@ -157,8 +159,8 @@
       height: 100vh;
       padding-right: 100px;
       object-fit: contain;
-      z-index: 2;
       margin-left: 20px;
+      
       
 
       @include mobile {
@@ -168,7 +170,8 @@
           align-items: center;
           justify-content: center;
           object-fit: contain;
-          z-index: 2;
+          
+          
         }
     }
 
